crates/sui/tests/snapshots/shell_tests__sui_move_new_tests__new_then_build.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/sui_move_new_tests/new_then_build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# tests that one move new followed by one move build succeeds

one move new example
cd example && one move build

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
INCLUDING DEPENDENCY Bridge
INCLUDING DEPENDENCY SuiSystem
INCLUDING DEPENDENCY Sui
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
